--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.11.1",
     "styled-components": "^5.3.10",
     "zustand": "^4.3.8"
